# FreeRTOS-raspberrypi-pico

./: CMakeLists.txt
FreeRTOS-example/: CMakeLists.txt  main.c
FreeRTOS-example/include/: FreeRTOSConfig.h
